--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<script src="./bundle.js" defer></script>
+	<script src="http://localhost:3000/bundle.js" defer></script>
 </head>
 <body>
 </body>
