--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	<script src="http://localhost:3000/bundle.js" defer></script>
+	<link rel="stylesheet" href="http://localhost:3000/style.css">
 </head>
 <body>
 </body>
